[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "asteroid-filterbanks>=0.4.0",
    "demucs>=4.0.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.1",
    "yt-dlp>=2025.9.5",
]
